--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,12 +18,15 @@
 	<nav class="main" id="n1" role="navigation">
 		<span><a href="/">Inicio</a></span>
 		<span><a href="quizes/question">Preguntas</a></span>
+		<span><a href="author"> Cr&eacute;ditos</a></span>
 	</nav>
 	<section class="main" id="s1">
 		<%-body%>
 	</section>
 	<footer class="main" id="f1">
 		<a href="http://es.wikipedia.org/wiki/Quiz"> &iquest;Que es un Quiz? </a>
+		<br>
+		<a href="https://github.com/ecreus/quiz-2015-emili-creus"> Ejercicio M&oacute;dulo 6 en HITBUB </a>
 	</footer>
 </div>
 </body>
