--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,7 +4,7 @@
 	<meta charset="utf-8"><title>Preguntas</title>
 	<link rel='stylesheet' type='text/css' href='/stylesheets/style.css'/>
 	<link rel='stylesheet' type='text/css' 
-	media='only screen and (max-width: 600px)and (min-device-width:481px)'
+	media='only screen and (min-width: 600px)and (min-device-width:481px)'
 	href='/stylesheets/wide.css'/>
 	<link rel='stylesheet' type='text/css'
 	media='only screen and (max-width:480px)'
