--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,7 +26,7 @@
 	<footer class="main" id="f1">
 		<a href="http://es.wikipedia.org/wiki/Quiz"> &iquest;Que es un Quiz? </a>
 		<br>
-		<a href="https://github.com/ecreus/quiz-2015-emili-creus"> Ejercicio M&oacute;dulo 6 en HITBUB </a>
+		<a href="https://github.com/ecreus/quiz-2015-emili-creus"> Ejercicio M&oacute;dulo 6 en HITHUB </a>
 	</footer>
 </div>
 </body>
