--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-        <meta charset="utf-8">
-        <title>Quiz</title>
-        <link rel='stylesheet' href='/stylesheets/style.css'/>
-</head>
-<body>
-<h2> QUIZ: el juego de las preguntas </h2>
-<p><%= autor %></p>
+<p>Emili Creus</p>
 <p> Curso MIRADAX</p>
 <p> Desarrolo de servicios en la nube con HTML5,Javascript y node.js</p>
 <p> <img src ="/images/f1.jpg"/></p>
-</body>
-</html>
+
 
