--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 
     <h1>Bienvenido a <%= title %></h1>
     <p>El portal donde podr&aacute crear sus propios juegos!</p>
-    <p> <a href="/quizes/question"> Comience a jugar </a></p>
+    <p> En la base de datos hay: <%=num_registros%></span> preguntas
+    <p> <a href="/quizes"> Comience a jugar </a></p>
