--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,5 +1,6 @@
- <p><%= respuesta %></p>
-<a href="/quizes/question"> Intentalo otra vez </a>
-
+ <p>
+<%= respuesta %><br>
+<a href="/quizes/<%=quiz.id%>"> Volver </a>
+</p>
 
 
