P2P modulo 7 busacdor de preguntas

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 
     <h1>Bienvenido a <%= title %></h1>
     <p>El portal donde podr&aacute crear sus propios juegos!</p>
-    <p> En la base de datos hay: <%=num_registros%></span> preguntas
+    <p> En la base de datos hay: 3 </span> preguntas
     <p> <a href="/quizes"> Comience a jugar </a></p>
