--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -2,11 +2,21 @@
 	<p>Pregunta:<%= quiz.pregunta %> <br>
   	Tema: <%= quiz.tema %>
 </p>
-
-
 	<input type="text" name="respuesta" value="responda aqu&iacute;"/>
 	<input type="submit" value="Enviar">
 </form>
+<p><a href="/quizes/<%=quiz.id %>/comments/new"><button> Nuevo comentario </button></a></p>
 
+<p><strong> Comentarios:</strong></p>
+
+<% for (index in quiz.Comments){ %>
+	<%if(quiz.Comments[index].publicado || session.user){%>
+		<p>- <%=quiz.Comments[index].texto%>
+			<%if(session.user && !quiz.Comments[index].publicado){%>
+				<a href="/quizes/<%=quiz.id%>/comments/<%=quiz.Comments[index].id%>/publish"><button>Publicar</button></a>
+			<%}%>
+		</p>
+	<%}%>
+<%}%>
 
 
